--- a/src/zrb/runner/web_app/group_info_ui/view.html
+++ b/src/zrb/runner/web_app/group_info_ui/view.html
@@ -11,11 +11,19 @@
   <body>
     <header>
       <hgroup>
-        <h1>{name}</h1>
-        <p>{description}</p>
+        <h1>{root_name}</h1>
+        <p>{root_description}</p>
+        <nav>
+          <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="{parent_url}">Parent</a></li>
+          </ul>
+        </nav>
       </hgroup>
     </header>
     <main>
+        <h3>{name}</h3>
+        <p>{description}</p>
         {group_info}
         {task_info}
     </main>
