--- a/src/zrb/runner/web_app/task_ui/view.html
+++ b/src/zrb/runner/web_app/task_ui/view.html
@@ -24,8 +24,10 @@
     <main>
         <h3>{name}</h3>
         <p>{description}</p>
-        {group_info}
-        {task_info}
+        <form>
+          {task_inputs}
+          <button>Run</button>
+        </form>
     </main>
   </body>
 </html>
