--- a/src/zrb/runner/web_app/task_ui/view.html
+++ b/src/zrb/runner/web_app/task_ui/view.html
@@ -34,6 +34,7 @@
   </body>
   <script>
     const API_URL = '{api_url}';
+    let SESSION_NAME = '{session_name}';
     {script} 
   </script>
 </html>
