--- a/src/zrb/runner/web_app/home_page/view.html
+++ b/src/zrb/runner/web_app/home_page/view.html
@@ -4,18 +4,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="color-scheme" content="light dark">
-    <link rel="stylesheet" href="/pico.classless.min.css">
+    <link rel="stylesheet" href="/pico.min.css">
     <link rel="icon" href="/favicon-32x32.png" sizes="32x32" type="image/png">
     <title>Zrb</title>
   </head>
   <body>
-    <header>
+    <header class="container">
       <hgroup>
         <h1>{name}</h1>
         <p>{description}</p>
       </hgroup>
     </header>
-    <main>
+    <main class="container">
         {group_info}
         {task_info}
     </main>
