--- a/src/zrb/runner/web_app/group_info_ui/view.html
+++ b/src/zrb/runner/web_app/group_info_ui/view.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="color-scheme" content="light dark">
-    <link rel="stylesheet" href="/pico.classless.min.css">
+    <link rel="stylesheet" href="/pico.min.css">
     <link rel="icon" href="/favicon-32x32.png" sizes="32x32" type="image/png">
     <title>Zrb</title>
   </head>
   <body>
-    <header>
+    <header class="container">
       <hgroup>
         <h1>{root_name}</h1>
         <p>{root_description}</p>
@@ -21,7 +21,7 @@
         </nav>
       </hgroup>
     </header>
-    <main>
+    <main class="container">
         <h3>{name}</h3>
         <p>{description}</p>
         {group_info}
