--- a/src/zrb/runner/web_app/task_ui/view.html
+++ b/src/zrb/runner/web_app/task_ui/view.html
@@ -52,6 +52,7 @@
     </main>
   </body>
   <script>
+    const CURRENT_URL = '{url}'
     const API_URL = '{api_url}';
     let SESSION_NAME = '{session_name}';
     {script} 
