--- a/src/zrb/runner/web_app/group_info_ui/view.html
+++ b/src/zrb/runner/web_app/group_info_ui/view.html
@@ -15,8 +15,8 @@
         <p>{root_description}</p>
         <nav>
           <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="{parent_url}">Parent</a></li>
+            <li><a href="/">🏠 Home</a></li>
+            <li><a href="{parent_url}">🔙 Parent</a></li>
           </ul>
         </nav>
       </hgroup>
