--- a/src/zrb/runner/web_app/task_ui/view.html
+++ b/src/zrb/runner/web_app/task_ui/view.html
@@ -78,6 +78,8 @@
     const API_URL = '{api_url}';
     const UI_URL = `{ui_url}`;
     let SESSION_NAME = '{session_name}';
-    {script} 
+    {main_script} 
+    {show_existing_session_script}
+    {visualize_history_script}
   </script>
 </html>
