--- a/src/zrb/runner/web_app/group_info_ui/view.html
+++ b/src/zrb/runner/web_app/group_info_ui/view.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="color-scheme" content="light dark">
-    <link rel="stylesheet" href="/pico.min.css">
-    <link rel="icon" href="/favicon-32x32.png" sizes="32x32" type="image/png">
+    <link rel="stylesheet" href="/static/pico.min.css">
+    <link rel="icon" href="/static/favicon-32x32.png" sizes="32x32" type="image/png">
     <title>Zrb</title>
   </head>
   <body>
