--- a/src/zrb/runner/web_controller/session_page/view.html
+++ b/src/zrb/runner/web_controller/session_page/view.html
@@ -1,84 +1,91 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="color-scheme" content="light dark">
-    <link rel="stylesheet" href="/static/pico.min.css">
-    <link rel="icon" href="/static/favicon-32x32.png" sizes="32x32" type="image/png">
-    <title>Zrb</title>
-  </head>
-  <body>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="color-scheme" content="light dark">
+        <link rel="stylesheet" href="/static/pico.min.css">
+        <link rel="icon" href="/static/favicon-32x32.png" sizes="32x32" type="image/png">
+        <title>Zrb</title>
+    </head>
+    <body>
 
-    <header class="container">
-      <hgroup>
-        <h1>{root_name}</h1>
-        <p>{root_description}</p>
-        <nav>
-          <ul>
-            <li><a href="/">🏠 Home</a></li>
-            <li><a href="{parent_url}">🔙 Parent</a></li>
-            <li><a href="{ui_url}">🆕 New Session</a></li>
-            <li><a href="#" onclick="openPastSessionDialog(event)">📂 Existing Session</a></li>
-          </ul>
-        </nav>
-      </hgroup>
-    </header>
-
-    <dialog id="past-session-dialog">
-      <article>
-        <header>
-          <button aria-label="Close" rel="prev" onclick="closePastSessionDialog(event)"></button>
-          <p>
-            <strong>📂 Existing Session</strong>
-          </p>
+        <header class="container">
+            <hgroup>
+                <h1>{root_name}</h1>
+                <p>{root_description}</p>
+                <nav>
+                    <ul>
+                        <li><a href="/">🏠 Home</a></li>
+                        <li><a href="{parent_url}">🔙 Parent</a></li>
+                        <li><a href="/docs">💻 API Documentation</a></li>
+                        <li><a href="{ui_url}">🆕 New Session</a></li>
+                        <li><a href="#" onclick="openPastSessionDialog(event)">📂 Existing Session</a></li>
+                    </ul>
+                    <ul>
+                        <li>{auth_link}</li>
+                    </ul>
+                </nav>
+            </hgroup>
         </header>
-        <main>
-          <form>
-            <fieldset class="grid">
-              <input type="datetime-local" id="min-start-at-input" placeholder="Minimum Start Time" aria-label="Minimum Start Time" />
-              <input type="datetime-local" id="max-start-at-input" placeholder="Maximum Start Time" aria-label="Maximum Start Time" />
-            </fieldset>
-          </form>
-          <ul id="past-session-ul" style="font-family:monospace;"></ul>
+
+        <dialog id="past-session-dialog">
+            <article>
+                <header>
+                    <button aria-label="Close" rel="prev" onclick="closePastSessionDialog(event)"></button>
+                    <p>
+                        <strong>📂 Existing Session</strong>
+                    </p>
+                </header>
+                <main>
+                    <form>
+                        <fieldset class="grid">
+                            <input type="datetime-local" id="min-start-at-input" placeholder="Minimum Start Time" aria-label="Minimum Start Time" />
+                            <input type="datetime-local" id="max-start-at-input" placeholder="Maximum Start Time" aria-label="Maximum Start Time" />
+                        </fieldset>
+                    </form>
+                    <ul id="past-session-ul" style="font-family:monospace;"></ul>
+                </main>
+                <footer>
+                    <nav>
+                        <ul id="past-session-pagination-ul"></ul>
+                    </nav>
+                </footer>
+            </article>
+        </dialog>
+
+        <main class="container">
+            <article>
+                <h2>{name}</h2>
+                <p>{description}</p>
+                <canvas id="history-canvas" height="0" width="1000" style="width: 100%;"></canvas>
+            </article>
+            <article>
+                <form id="submit-task-form" onsubmit="submitNewSessionForm(event)">
+                    {task_inputs}
+                    <button>🚀 Run</button>
+                </form>
+            </article>
+            <article>
+                <label>
+                    Result
+                    <textarea id="result-textarea" rows="1" readonly style="font-family:monospace;">
+                    </textarea>
+                </label>
+                <label>
+                    Log
+                    <textarea id="log-textarea" rows="5" readonly style="font-family:monospace;">
+                    </textarea>
+                </label>
+            </article>
         </main>
-        <footer>
-          <nav>
-            <ul id="past-session-pagination-ul"></ul>
-          </nav>
-        </footer>
-      </article>
-    </dialog>
 
-    <main class="container">
-      <h3>{name}</h3>
-      <p>{description}</p>
-      <canvas id="history-canvas" height="0" width="1000" style="width: 100%;"></canvas>
-      <hr />
-      <form id="submit-task-form" onsubmit="submitNewSessionForm(event)">
-        {task_inputs}
-        <button>🚀 Run</button>
-      </form>
-      <hr />
-      <label>
-        Result
-        <textarea id="result-textarea" rows="1" readonly style="font-family:monospace;">
-        </textarea>
-      </label>
-      <label>
-        Log
-        <textarea id="log-textarea" rows="5" readonly style="font-family:monospace;">
-        </textarea>
-      </label>
-    </main>
-
-  </body>
-  <script>
-    const cfg = {json_cfg};
-  </script>
-  <script src="/static/task-ui/common-util.js"></script>
-  <script src="/static/task-ui/past-session.js"></script>
-  <script src="/static/task-ui/current-session.js"></script>
-  <script src="/static/task-ui/event.js"></script>
-
+    </body>
+    <script>
+        const cfg = {json_cfg};
+    </script>
+    <script src="/static/session/common-util.js"></script>
+    <script src="/static/session/past-session.js"></script>
+    <script src="/static/session/current-session.js"></script>
+    <script src="/static/session/event.js"></script>
 </html>
