--- a/src/zrb/runner/web_controller/login_page/view.html
+++ b/src/zrb/runner/web_controller/login_page/view.html
@@ -45,6 +45,7 @@
         </article>
     </main>
     <script src="/static/login/event.js"></script>
+    <script src="/refresh-token.js"></script>
 </body>
 
 </html>
