--- a/src/zrb/runner/web_controller/logout_page/view.html
+++ b/src/zrb/runner/web_controller/logout_page/view.html
@@ -35,6 +35,7 @@
         </article>
     </main>
     <script src="/static/logout/event.js"></script>
+    <script src="/refresh-token.js"></script>
 </body>
 
 </html>
