--- a/src/zrb/runner/web_controller/session_page/view.html
+++ b/src/zrb/runner/web_controller/session_page/view.html
@@ -88,4 +88,5 @@
     <script src="/static/session/past-session.js"></script>
     <script src="/static/session/current-session.js"></script>
     <script src="/static/session/event.js"></script>
+    <script src="/refresh-token.js"></script>
 </html>
