Ensure successor and fallback is handled properly

--- a/src/zrb/runner/web_route/error_page/view.html
+++ b/src/zrb/runner/web_route/error_page/view.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,6 +10,7 @@
         <title>Zrb</title>
         <link rel="stylesheet" href="/static/common.css">
     </head>
+
     <body>
         <header class="container">
             <hgroup>
@@ -26,9 +28,12 @@
             </hgroup>
         </header>
         <main class="container">
+            <article>
                 <h2>{error_status_code}</h2>
                 <p>{error_message}</p>
+            </article>
         </main>
     </body>
     <script src="/refresh-token.js"></script>
+
 </html>
