--- a/src/zrb/runner/web_route/node_page/task/view.html
+++ b/src/zrb/runner/web_route/node_page/task/view.html
@@ -63,7 +63,7 @@
             <article>
                 <form id="submit-task-form" onsubmit="submitNewSessionForm(event)">
                     {task_inputs}
-                    <button>🚀 Run</button>
+                    <button>🚀 Run New Session</button>
                 </form>
             </article>
             <article>
