--- a/src/zrb/runner/web_route/home_page/view.html
+++ b/src/zrb/runner/web_route/home_page/view.html
@@ -1,33 +1,19 @@
-<!doctype html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="color-scheme" content="light dark">
-        <link rel="stylesheet" href="/static/pico.min.css">
-        <link rel="icon" href="/static/favicon-32x32.png" sizes="32x32" type="image/png">
-        <title>Zrb</title>
-        <link rel="stylesheet" href="/static/common.css">
-    </head>
-    <body>
-        <header class="container">
-            <hgroup>
-                <h1>{name}</h1>
-                <p>{description}</p>
-                <nav>
-                    <ul>
-                        <li><a href="/docs">💻 API Documentation</a></li>
-                    </ul>
-                    <ul>
-                        <li>{auth_link}</li>
-                    </ul>
-                </nav>
-            </hgroup>
-        </header>
-        <main class="container">
-                {group_info}
-                {task_info}
-        </main>
-    </body>
-    <script src="/refresh-token.js"></script>
-</html>
+<header class="container">
+    <hgroup>
+        <h1>{web_title}</h1>
+        <p>{web_jargon}</p>
+        <nav>
+            <ul>
+                <li><a href="/docs">💻 API Documentation</a></li>
+            </ul>
+            <ul>
+                <li>{auth_link}</li>
+            </ul>
+        </nav>
+    </hgroup>
+</header>
+<main class="container">
+    <p>{web_homepage_intro}</p>
+    {group_info}
+    {task_info}
+</main>
