--- a/src/zrb/runner/web_route/node_page/task/view.html
+++ b/src/zrb/runner/web_route/node_page/task/view.html
@@ -1,7 +1,7 @@
 <header class="container">
     <hgroup>
-        <h1>{root_name}</h1>
-        <p>{root_description}</p>
+        <h1>{web_title}</h1>
+        <p>{web_jargon}</p>
         <nav>
             <ul>
                 <li><a href="/">🏠 Home</a></li>
